# DS-Unit-2-Applied-Modeling

./: .gitignore  233_guided_project_notes.ipynb  234_model_interpretation.ipynb  245(B)_ZERNACH_—_Unit_2(B)_Portfolio_Project_(November_22nd,_2019).ipynb  Anh_Vu_DS_Sprint_Challenge_7.ipynb  Applied Modeling Sprint Challenge.ipynb.ipynb  Bo_Warburton_LS_DS_231_assignment.ipynb  Bo_Warburton_LS_DS_232_assignment.ipynb  Bo_Warburton_LS_DS_233_assignment.ipynb  Bo_Warburton_LS_DS_234_assignment.ipynb  Bo_Warburton_LS_DS_235_Sprint_Challenge_7.ipynb  Britne_H_LS_DS_234_assignment.ipynb  Cai Nowicki assignment_applied_modeling_2.ipynb  Copy_of_DS_Sprint_Challenge_7.ipynb  Copy_of_LS_DS_231_assignment.ipynb  Copy_of_LS_DS_232_assignment.ipynb  Copy_of_LS_DS_233_assignment.ipynb  Copy_of_assignment_applied_modeling_1.ipynb  Copy_of_assignment_applied_modeling_2.ipynb  Cortesha_RosaRobinson_Unit_2_Build_Pima_Indian_Diabetes_Predictions.ipynb  DSPT3_lesson_applied_modeling_2.ipynb  DS_Sprint_Challenge_7.ipynb  DSproject2.ipynb  Day 35 SC.ipynb.ipynb  Ekram_LS_DS_231_assignment.ipynb  Ekram_LS_DS_232_assignment.ipynb  Ekram_LS_DS_233_assignment.ipynb  Ekram_LS_DS_234_assignment.ipynb  Historical data for Bitcoin.csv  Jisha_Obukwelu_DSPT3_231_Applied_Modeling_1.ipynb  Jisha_Obukwelu_DSPT3_231_Applied_Modeling_1_2.ipynb  Jisha_Obukwelu_DSPT3_232_Applied_Modeling_Assignment.ipynb  Jisha_Obukwelu_DSPT3_233_Model_Interpretation_1_Assignment.ipynb  Jisha_Obukwelu_DSPT3_234_Model_Interpretation_2_Assignment.ipynb  Kole_Goldsberry_assignment_applied_modeling_1_second.ipynb  (+89 more)
module4/: app.py  (+24 more)
(+369 files in other folders)
